Moved all stash references to GitHub (#2)
* Changed stash references to GitHub
* Increased version to 1.10.2

--- a/Dockerfile.build-base
+++ b/Dockerfile.build-base
@@ -35,5 +35,5 @@ FROM build-base
 
 RUN go env -w GO111MODULE=auto
 
-COPY *.go $GOPATH/src/stash.us.cray.com/HMS/hms-hmetcd/
-COPY vendor $GOPATH/src/stash.us.cray.com/HMS/hms-hmetcd/vendor
+COPY *.go $GOPATH/src/github.com/Cray-HPE/hms-hmetcd/
+COPY vendor $GOPATH/src/github.com/Cray-HPE/hms-hmetcd/vendor
