--- a/Dockerfile.coverage
+++ b/Dockerfile.coverage
@@ -26,4 +26,4 @@ FROM cray/hms-hmetcd-build-base
 
 # Run coverage.
 RUN set -ex \
-    && go test -cover -v stash.us.cray.com/HMS/hms-hmetcd/...
+    && go test -cover -v github.com/Cray-HPE/hms-hmetcd/...
