--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -26,4 +26,4 @@ FROM cray/hms-hmetcd-build-base
 
 # Run any tests that might be present.
 RUN set -ex \
-    && go test -v stash.us.cray.com/HMS/hms-hmetcd/...
+    && go test -v github.com/Cray-HPE/hms-hmetcd/...
